# test_task_middle

./: .env  .env.docker  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2400c9a52ca9_init.py  2af225afeda0_init.py  938f1a7982e7_init.py
app/: main.py
app/core/: logs.py  middlewares.py  security.py  settings.py
app/core/neuronal_network/: dataset.py  execution.py  generate_user_activity.py  model.pt  net.py  prediction.py
app/core/neuronal_network/pytorch_model_legacy/: dataset.py  execution.py  generate_user_activity.py  net.py
app/db/: database.py
app/db/crud/: users_crud.py
app/db/models/: __init__.py  users_models.py
app/routes/v1/: auth_routes.py  router_v1.py  users_routes.py
app/schemas/: common_shemas.py  users_schemas.py
tests/: __init__.py  conftest.py
tests/test_routes/: test_auth_routes.py  test_users_routes.py
